--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "php": ">=5.4",
         "ext-mcrypt": "*",
         "ext-mbstring": "*",
-		"cakephp/cakephp" ">=3.*"
+		"cakephp/cakephp": ">=3.*"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*"
