--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
     "authors": [
         {
             "name": "Christopher Castro"
+			"email": "chris@quickapps.es"
         }
     ],
     "support": {
@@ -18,7 +19,7 @@
         "php": ">=5.4",
         "ext-mcrypt": "*",
         "ext-mbstring": "*",
-		"cakephp/cakephp": "3.*"
+		"cakephp/cakephp": "3.0.*-dev"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*"
