--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "license": "GPL",
     "authors": [
         {
-            "name": "Christopher Castro"
+            "name": "Christopher Castro",
 			"email": "chris@quickapps.es"
         }
     ],
