--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,7 @@
     "homepage": "http://quickappscms.org",
     "license": "GPL",
     "authors": [
-        {
-            "name": "Christopher Castro",
-			"email": "chris@quickapps.es"
-        }
+        {"name": "Christopher Castro", "email": "chris@quickapps.es"}
     ],
     "support": {
         "issues": "https://github.com/QuickAppsCMS/QuickApps-CMS/issues",
@@ -19,7 +16,7 @@
         "php": ">=5.4",
         "ext-mcrypt": "*",
         "ext-mbstring": "*",
-		"cakephp/cakephp": "3.0.*-dev"
+        "cakephp/cakephp": "3.0.*-dev"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*"
