--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "library",
     "keywords": ["framework", "cms", "cmf"],
     "homepage": "http://quickappscms.org",
-    "license": "GPL",
+    "license": "GPL-3.0",
     "authors": [
         {"name": "Christopher Castro", "email": "chris@quickapps.es"}
     ],
